# Moveit_Calibration_Docker

./: .prova.launch.swp  Dockerfile  README.md  docker-compose-gui.yml  docker-compose.yml  pos_camera.launch  prova.launch
src/Calibration Starter/: CMakeLists.txt  package.xml
src/Calibration Starter/launch/: launcher.launch
src/ur3e_gemini335Lg_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur3e_gemini335Lg_moveit_config/config/: fake_controllers.yaml  ur3e_gemini335Lg.srdf
src/ur3e_gemini335Lg_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/ur3e_rs_d415_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur3e_rs_d415_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  ur3e_rs_d415.srdf
src/ur3e_rs_d415_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  (+9 more)
src/ur5_rs_d415_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_gemini335Lg_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_rs_d415_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+59 files in other folders)
