<?xml version="1.0"?>
<package format="2">
  <name>start_calibration</name>
  <version>1.0.0</version>
  <description>
    Launcher and utils for calibration
  </description>
  <maintainer email="support@qbrobotics.com">Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>